--- a/app/SearchSwimmer.html
+++ b/app/SearchSwimmer.html
@@ -12,6 +12,7 @@
         <div class="navbar-inner">
           <ul class="nav">
             <li><a href="/NewSwimmer.html">Search Swimmer</a></li>
+            <li><a href="/SwimmerDetails.html">Swimmer Details</a></li>
           </ul>
         </div>
       </div>
@@ -49,7 +50,7 @@
     <script src="/lib/angular/angular-sanitize.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/SwimmerController.js"></script>
-    <script src="/js/controllers/EditSwimmerController.js"></script>
+    <script src="/js/controllers/SearchSwimmerController.js"></script>
     <script src="/js/filters.js"></script>
   </body>
 </html>
