--- a/app/SwimmerDetails.html
+++ b/app/SwimmerDetails.html
@@ -11,11 +11,11 @@
       <div class="navbar">
         <div class="navbar-inner">
           <ul class="nav">
-            <li><a href="/NewSwimmer.html">Add Swimmer</a></li>
+            <li><a href="/SearchSwimmer.html">Add Swimmer</a></li>
           </ul>
         </div>
       </div>
-      <div ng-controller="SwimmerController" style="padding-left:20px; padding-right:20px">
+      <div ng-controller="SwimmerDetailsController" style="padding-left:20px; padding-right:20px">
         <img ng-src="{{swimmer.imageUrl}}" alt="{{swimmer.name}}">
         <div class="row">
           <div class="span11">
@@ -88,7 +88,7 @@
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular/angular-sanitize.js"></script>
     <script src="/js/app.js"></script>
-    <script src="/js/controllers/SwimmerController.js"></script>
+    <script src="/js/controllers/SwimmerDetailsController.js"></script>
     <script src="/js/filters.js"></script>
   </body>
 </html>
