--- a/app/SearchSwimmer.html
+++ b/app/SearchSwimmer.html
@@ -33,7 +33,7 @@
               <br>
             </fieldset>
             <fieldset class="span6">
-              <button type="submit" style="margin-top:20px" ng-disabled="newSwimmerForm.$invalid" ng-click="searchSwimmer(swimmer, newSwimmerForm)" class="btn btn-primary">Save</button>
+              <button type="submit" style="margin-top:20px" ng-disabled="newSwimmerForm.$invalid" ng-click="searchSwimmer(swimmer, newSwimmerForm)" class="btn btn-primary">Search</button>
               <button type="button" style="margin-top:20px" ng-click="cancelSwimmer()" class="btn btn-default">Cancel</button>
             </fieldset>
 
@@ -46,7 +46,6 @@
           <!--Show search result-->
           <ul class="thumbnails">
           <li ng-repeat="swimmer in searchResult | orderBy:id | limitTo:10">
-
             <div class="row session">
               <div class="well span9">
                 <h4 class="well-title">{{swimmer.name}}</h4>
@@ -59,11 +58,11 @@
           </ul>
 
           <!--Show alert if nothing found-->
-          <div ng-show="!searchResult.length">Nothing found</div>
-          <!--<div collapse="isCollapsed" class="alert"<\div>-->
-          <!--<div class="alert alert-info">-->
-            <!--<strong>Search</strong> {{$scope.alertMessage}}-->
-          <!--</div>-->
+          <div ng-show="noHitsReturned">
+            <div class="alert alert-warning">
+            <strong>Search</strong> Returned no hits
+            </div>
+          </div>
 
         </div>
       </div>
