--- a/app/SearchSwimmer.html
+++ b/app/SearchSwimmer.html
@@ -18,7 +18,7 @@
       </div>
       <div ng-controller="SearchSwimmerController" style="padding-left:20px; padding-right:20px">
         <div class="container">
-          <h1>New Swimmer</h1>
+          <h1>Search Swimmer</h1>
           <hr>
           <form class="row-fluid well" name="newSwimmerForm">
             <fieldset class="span6">
