--- a/app/SwimmerDetails.html
+++ b/app/SwimmerDetails.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="span3">
             <div><strong>Id:</strong> {{swimmer.id}}</div>
-            <div><strong>Born:</strong> {{swimmer.dateOfBirth}}</div>
+            <div><strong>Born:</strong> {{swimmer.yearOfBirth}}</div>
             <div><strong>Club:</strong> {{swimmer.club}}</div>
           </div>
         </div>
