--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
         <script src="/js/script.js"></script>
     </head>
-    <body ng-cloak>
+    <body>
 
 <!-- HEADER AND NAVBAR -->
         <header>
@@ -31,6 +31,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                    <li><a href="#search"><i class="fa fa-search"></i> Search</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
                     <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
                 </ul>
