--- a/app/pages/swimmer.html
+++ b/app/pages/swimmer.html
@@ -1,6 +1,6 @@
 <!-- about.html -->
     <div class="jumbotron text-center">
-    <div class="container">
+    <div ng-cloak class="container">
       <div style="padding-left:20px; padding-right:20px">
         <!-- If swimmer has imageUrl, not implmented <img ng-src="{{swimmer.imageUrl}}" alt="{{swimmer.name}}">-->
         <div class="row">
