--- a/app/pages/swimmerlist.html
+++ b/app/pages/swimmerlist.html
@@ -1,7 +1,7 @@
 <!-- home.html -->
 <div class="jumbotron text-center">
     <h1>Swimmers</h1>
-    <div style="padding-left:20px; padding-right:20px">
+    <div ng-cloak style="padding-left:20px; padding-right:20px">
         <container ng-repeat="swimmer in swimmers">
 
 			<div class="panel panel-default" ng-click="showSwimmerDetails(swimmer)">
