--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div ng-cloak class="col-md-6 col-md-offset-3">
     {{errorMessage}}
     <h2>Login</h2>
     <form name="form" ng-submit="login()" role="form">
