--- a/app/pages/swimmerlist.html
+++ b/app/pages/swimmerlist.html
@@ -6,7 +6,7 @@
 
 			<div class="panel panel-default" ng-click="showSwimmerDetails(swimmer)">
 			  <div class="panel-heading">
-			    <h3 class="panel-title">{{swimmer.name}}</h3>
+			    <h3 class="panel-title">{{swimmer.firstName}} {{swimmer.lastName}}</h3>
 			  </div>
 			  <div class="panel-body">
                 	<span>Club: {{swimmer.club}}</span><br />
