--- a/app/pages/swimmer.html
+++ b/app/pages/swimmer.html
@@ -5,7 +5,7 @@
         <!-- If swimmer has imageUrl, not implmented <img ng-src="{{swimmer.imageUrl}}" alt="{{swimmer.name}}">-->
         <div class="row">
           <div class="span11">
-            <h1>{{swimmer.name}} </h1>
+            <h1>{{swimmer.firstName}} {{swimmer.lastName}} </h1>
           </div>
         </div>
       
