--- a/app/index.html
+++ b/app/index.html
@@ -2,22 +2,17 @@
     <!DOCTYPE html>
     <html ng-app="scotchApp">
     <head>
-      <!-- SCROLLS -->
       <!-- load bootstrap and fontawesome via CDN -->
-      <!--<link rel="stylesheet" href="/css/bootstrap.min.css">-->
-      <!--<link rel="stylesheet" href="/css/app.css">-->
-
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
-
-      <!-- SPELLS -->
       <!-- load angular and angular route via CDN -->
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-cookies.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-cookies.js"></script>
 
-        <script src="/js/script.js"></script>
+      <!-- Load swimmer stuff, angular routing and setup and all controllers -->
+      <script src="/js/script.js"></script>
     </head>
     <body>
 
