--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,10 @@
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#search"><i class="fa fa-search"></i> Search</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                    <li><a href=  "#"><i class="fa fa-home"></i> Hem</a></li>
+                    <li><a href="#search"><i class="fa fa-search"></i> Sök</a></li>
+                    <li><a href="#about"><i class="fa fa-shield"></i> Om</a></li>
+                    <li><a href="#contact"><i class="fa fa-comment"></i> Kontakt</a></li>
                 </ul>
             </div>
             </nav>
