--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -1,6 +1,6 @@
 <!-- about.html -->
     <div ng-controller="aboutController" class="jumbotron text-center">
-    	<h1>About Page</h1>
+    	<h1>Om Swimpy</h1>
 
     	<p>{{ message }}</p>
     </div>
