--- a/app/pages/swimmerlist.html
+++ b/app/pages/swimmerlist.html
@@ -1,6 +1,6 @@
 <!-- home.html -->
 <div class="jumbotron text-center">
-    <h1>Swimmers</h1>
+    <h1>Simmare</h1>
     <div ng-cloak style="padding-left:20px; padding-right:20px">
         <container ng-repeat="swimmer in swimmers">
 
@@ -9,9 +9,9 @@
 			    <h3 class="panel-title">{{swimmer.firstName}} {{swimmer.lastName}}</h3>
 			  </div>
 			  <div class="panel-body">
-                	<span>Club: {{swimmer.club}}</span><br />
-                	<span>Year of birth: {{swimmer.dateOfBirth}}</span><br />
-                	<span>Date: {{swimmer.id}}</span>                	
+                	<span>Klubb: {{swimmer.club}}</span><br />
+                	<span>Född år: {{swimmer.dateOfBirth}}</span><br />
+                	<span>Id: {{swimmer.id}}</span>                	
 			  </div>
 			</div>
 
