--- a/app/pages/contact.html
+++ b/app/pages/contact.html
@@ -1,6 +1,6 @@
 <!-- contact.html -->
     <div class="jumbotron text-center">
-        <h1>Contact Page</h1>
+        <h1>Kontakt</h1>
 
         <p>{{ message }}</p>
     </div>
