--- a/app/pages/signup.html
+++ b/app/pages/signup.html
@@ -1,6 +1,6 @@
 <!-- contact.html -->
     <div class="jumbotron text-center">
-        <h1>Signup</h1>
+        <h1>Skapa konto</h1>
 
         <p>{{ message }}</p>
     </div>
