added some competitions stuff in front end

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href=  "#"><i class="fa fa-home"></i> Hem</a></li>
                     <li><a href="#search"><i class="fa fa-search"></i> Sök</a></li>
+                    <li><a href="#competitions"><i class="fa fa-flag-checkered"></i> Tävlingar</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> Om</a></li>
                     <li><a href="#contact"><i class="fa fa-comment"></i> Kontakt</a></li>
                 </ul>
