changed date format

--- a/app/pages/swimmer.html
+++ b/app/pages/swimmer.html
@@ -38,7 +38,7 @@
                   <div class="panel-body">
                     <span>Tid: {{personalBest.time}}</span><br />
                     <span>Tävling: {{personalBest.competition}}</span><br />
-                    <span>Datum: {{personalBest.date}}</span>
+                    <span>Datum: {{ personalBest.date | date:'MM/dd/yyyy'}}</span>
                   </div>
                 </div>
             </div>
